# au-formal-langs-spring-2016

./: README.md
Hw3/: DFA.hs  DFAunion.hs  FST.hs  JFF.hs  NFA.hs  nfa1.jff
Hw4/: Lexer.x
Hw5/: L.cabal  grammar
Hw5/src/: Expr.hs  Lexer.x  Parser.y
Hw5/test/: testLexer.hs  testParser.hs
Hw6/: L.cabal  README.md
Hw6/src/: Expr.hs  Main.hs  Parser.hs
Hw6/test/: testParser.hs
src/: Expr.hs  Lexer.x  Main.hs
